# styx-history

./: LICENSE  LICENSE.md  README.md
styx.fs/: .gitignore  LICENSE.md  README.md
styx.fs/docs/: INTRO.md  README.md
styx.fs/docs/impl/: BOOTSTRAP.md  FUTURES.md  README.md  SEQUENCES.md  TYPESYSTEM.md
styx.fs/docs/specs/: API.md  BACKENDS.md  HOLES.md  LANGUAGE.md  README.md  SYNTAX.md  TYPESYSTEM.md
styx.fs/lib/: API.md  Initialize.sx  Main.sx
styx.fs/lib/Styx/: Function.sx  Input.sx  Styx.sx
styx.fs/lib/System/: Char.sx  Console.sx  Control.sx  Core.sx  Environment.sx  Memory.sx  Pointers.sx  Primitives.sx  Results.sx  String.sx  System.sx  Tasks.sx  Tuples.sx
styx.fs/scenarios/: DT.md  DependentTypes.md  FreeMonads.md  README.md
styx.fs/src/: Styx.sln
styx.fs/src/Styx/: Binder.fs  Compiler.fs  Core.fs  Hole.fs  IL.fs  (+3 more)
styx.fs/src/Styx.Tests/: Common.fs  Program.fs  Styx.Tests.fsproj
styx.fs/tools/: API.fsx
styx.rs/: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs
styx.rs/lib/: README.md
styx.rs/src/: analysis.rs  assembler.rs  binder.rs  builder.rs  context.rs  diagnostics.rs  emit.rs  expr.rs  input.rs  instr.rs  lexer.rs  lib.rs  macros.rs  main.rs  opt.rs  parser.rs  prelude.rs  procedures.rs  symbols.rs  typesystem.rs  utils.rs  visitor.rs  vm.rs
styx.rs/src/arch/: common.py  mod.rs  x86.py
styx.rs/src/core/: meta.rs  mod.rs  primitives.rs  syscore.rs
styx.rs/src/intrinsics/: mod.rs  prelude.rs  syntax.rs
styx.rs/src/server/: kernel.json  mod.rs  styxkernel.py
styx.rs/tests/: contexts.rs
styx.rs/tests/common/: mod.rs
(+55 files in other folders)
