[package]
name = "styx"
version = "0.1.0"
authors = ["Gregoire Geis <public.greg@outlook.com>"]
description = "Styx compiler and virtual machine."
repository = "https://github.com/6A/styx"
license = "MIT"
build = "build.rs"

[lib]
name = "styx"
path = "src/lib.rs"

[[bin]]
name = "styx"
path = "src/main.rs"
doc = false
required-features = [ "deamon" ]

[features]
default = [ "deamon" ]
deamon = [ "hyper", "uuid", "qstring" ]

[dependencies]
lazy_static = "^0.2"
yansi = "^0.3"
fnv = "^1.0"
rand = "^0.3"
clap = "^2.29"
glob = "^0.2"
bitflags = "^1.0"
futures = "^0.1"
futures-cpupool = "^0.1"
string-interner = "^0.6"
byteorder = "^1.2"
env_logger = "^0.4"
log = "^0.3"

uuid    = { version = "^0.5",  optional = true, features = [ "v4" ] }
hyper   = { version = "^0.11", optional = true }
qstring = { version = "^0.4",  optional = true }

[target.'cfg(windows)'.dependencies]
kernel32-sys = "^0"

[build-dependencies]
glob = "^0.2"

[dev-dependencies]
stainless = "*"

